add open file from Onedrive

--- a/src/components/googledrive/dashboard/dashboard.component.html
+++ b/src/components/googledrive/dashboard/dashboard.component.html
@@ -23,5 +23,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<a href="https://drive.google.com/uc?id=1Ej-spz73FX0Fqi1nXAiMh6nHAr06LzGW&export=download" download="zipfile">aaaaaa</a>
+<a href="https://www.googleapis.com/drive/v3/files/1Ej-spz73FX0Fqi1nXAiMh6nHAr06LzGW" download="zipfile">aaaaaa</a>
 <button mat-button (click)="signOut()">Sign out</button>
