--- a/src/components/menu/menu.component.html
+++ b/src/components/menu/menu.component.html
@@ -1,3 +1,4 @@
 <input type="file" accept=".twdx" (change)="onChange($event.target.files[0])"/><br/>
 <app-signin></app-signin>
+<app-profile></app-profile>
 <app-dashboard></app-dashboard>
