--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,39 @@
 <app-menu></app-menu>
 <br>
-<app-view></app-view>
 <!-- <router-outlet></router-outlet> -->
+<!-- <div class="container">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">MSAL Angular Sample App</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a [routerLink]="['home']">Home</a></li>
+          <li><a [routerLink]="['product']">Product</a></li>
+          <li><a [routerLink]="['userProfile']">User Profile</a></li>
+          <li><a [routerLink]="['todoList']">Web API Call</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a  *ngIf="!loggedIn"   (click)="login()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li><a  *ngIf="loggedIn" (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
+      </div>
+    </nav>
+  <router-outlet *ngIf="!isIframe"></router-outlet>
+  </div> -->
+
+  <!-- <mat-toolbar color="primary">
+    <a class="title" href="/">{{ title }}</a>
+  
+    <div class="toolbar-spacer"></div>
+  
+    <a mat-button [routerLink]="['profile']">Profile</a>
+  
+    <button mat-raised-button *ngIf="!loggedIn" (click)="login()">Login</button>
+    <button mat-raised-button *ngIf="loggedIn" (click)="logout()">Logout</button>
+  </mat-toolbar>
+  <div class="container">
+    <router-outlet *ngIf="!isIframe"></router-outlet>
+  </div> -->
+  <br>
+  <app-view></app-view>
